mrt_ws_new/log/build_2024-01-04_21-22-13/rishith_assn_2/stdout_stderr.log
running develop
Removing /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/python3.10/site-packages/rishith-assn-2.egg-link (link to .)
running egg_info
writing ../../build/rishith_assn_2/rishith_assn_2.egg-info/PKG-INFO
writing dependency_links to ../../build/rishith_assn_2/rishith_assn_2.egg-info/dependency_links.txt
writing entry points to ../../build/rishith_assn_2/rishith_assn_2.egg-info/entry_points.txt
writing requirements to ../../build/rishith_assn_2/rishith_assn_2.egg-info/requires.txt
writing top-level names to ../../build/rishith_assn_2/rishith_assn_2.egg-info/top_level.txt
reading manifest file '../../build/rishith_assn_2/rishith_assn_2.egg-info/SOURCES.txt'
writing manifest file '../../build/rishith_assn_2/rishith_assn_2.egg-info/SOURCES.txt'
running build
running build_py
copying rishith_assn_2/d_rover1.py -> /home/rishith/mrt_ws_new/build/rishith_assn_2/build/lib/rishith_assn_2
running install
running install_lib
copying /home/rishith/mrt_ws_new/build/rishith_assn_2/build/lib/rishith_assn_2/d_rover3.py -> /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/python3.10/site-packages/rishith_assn_2
copying /home/rishith/mrt_ws_new/build/rishith_assn_2/build/lib/rishith_assn_2/d_rover2.py -> /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/python3.10/site-packages/rishith_assn_2
copying /home/rishith/mrt_ws_new/build/rishith_assn_2/build/lib/rishith_assn_2/d_rover4.py -> /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/python3.10/site-packages/rishith_assn_2
copying /home/rishith/mrt_ws_new/build/rishith_assn_2/build/lib/rishith_assn_2/__init__.py -> /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/python3.10/site-packages/rishith_assn_2
copying /home/rishith/mrt_ws_new/build/rishith_assn_2/build/lib/rishith_assn_2/d_rover1.py -> /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/python3.10/site-packages/rishith_assn_2
byte-compiling /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/python3.10/site-packages/rishith_assn_2/d_rover3.py to d_rover3.cpython-310.pyc
byte-compiling /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/python3.10/site-packages/rishith_assn_2/d_rover2.py to d_rover2.cpython-310.pyc
byte-compiling /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/python3.10/site-packages/rishith_assn_2/d_rover4.py to d_rover4.cpython-310.pyc
byte-compiling /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/python3.10/site-packages/rishith_assn_2/setup.py to setup.cpython-310.pyc
byte-compiling /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/python3.10/site-packages/rishith_assn_2/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/python3.10/site-packages/rishith_assn_2/d_rover1.py to d_rover1.cpython-310.pyc
  File "/home/rishith/mrt_ws_new/install/rishith_assn_2/lib/python3.10/site-packages/rishith_assn_2/setup.py", line 17
    ],
    ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '(' on line 16

running install_data
running install_egg_info
Copying ../../build/rishith_assn_2/rishith_assn_2.egg-info to /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/python3.10/site-packages/rishith_assn_2-0.0.0-py3.10.egg-info
running install_scripts
Installing d_rover1 script to /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/rishith_assn_2
Installing d_rover2 script to /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/rishith_assn_2
Installing d_rover3 script to /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/rishith_assn_2
Installing d_rover4 script to /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/rishith_assn_2
writing list of installed files to '/home/rishith/mrt_ws_new/build/rishith_assn_2/install.log'
